# ai-examples

./: .gitignore  README.md  pyproject.toml
data_types/: collateral_factor.py  prices.py
database/: connection.py  prices.py
examples/ask_a_question_cli/: __main__.py
examples/collateral_factors/: README.md  __main__.py
examples/convert_ingredients_to_recipe/: __main__.py
examples/explain_alarm_results/: __main__.py
examples/explain_alarm_results/data/: token_price_percent_change_alarm.json  token_price_percent_change_timeseries.json
examples/explain_function/: __main__.py
examples/natural_language_command_line/: __main__.py
examples/write_a_song/: __main__.py
index_data/: collateral_factor.py
infrastructure/: local.docker-compose.yml  local.start.sh  local.stop.sh
static_data/: __init__.py  collateral_factors.py
utils/: config.py  datetimes.py  logger.py
