[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "ai-examples"
version = "0.0.1"
requires-python = ">=3.7"
dependencies = ["langchain>=0.0.214"]

[project.optional-dependencies]
dev = ["black>=23.3.0", "python-dotenv>=1.0.0"]
