[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
dependencies = [
  "openai>=0.27.8",
  "langchain>=0.0.214",
  "argparse-prompt>=0.0.5",
  "psycopg2>=2.9.6",
  "python-json-logger>=2.0.7",
  "python-dateutil>=2.8.2",
  "pandas>=2.0.2",
  "tabulate>=0.9.0",
  "featureform>=1.9.5",
]
name = "ai-examples"
version = "0.0.1"
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black>=23.3.0", "python-dotenv>=1.0.0"]
